Implement dataset module in our api-gateway
